; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_testjobs.c_cttest_job_all_jobs_used.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_testjobs.c_cttest_job_all_jobs_used.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@default_tube = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"should match\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cttest_job_all_jobs_used() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @default_tube, align 4
  %4 = call i32 @make_tube(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @TUBE_ASSIGN(i32 %3, i32 %4)
  %6 = load i32, i32* @default_tube, align 4
  %7 = call i32* @make_job(i32 0, i32 0, i32 1, i32 0, i32 %6)
  store i32* %7, i32** %1, align 8
  %8 = call i32 (...) @get_all_jobs_used()
  %9 = icmp eq i32 %8, 1
  %10 = zext i1 %9 to i32
  %11 = call i32 @assertf(i32 %10, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32* @allocate_job(i32 10)
  store i32* %12, i32** %2, align 8
  %13 = call i32 (...) @get_all_jobs_used()
  %14 = icmp eq i32 %13, 1
  %15 = zext i1 %14 to i32
  %16 = call i32 @assertf(i32 %15, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @job_free(i32* %17)
  %19 = call i32 (...) @get_all_jobs_used()
  %20 = icmp eq i32 %19, 1
  %21 = zext i1 %20 to i32
  %22 = call i32 @assertf(i32 %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @job_free(i32* %23)
  %25 = call i32 (...) @get_all_jobs_used()
  %26 = icmp eq i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @assertf(i32 %27, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @TUBE_ASSIGN(i32, i32) #1

declare dso_local i32 @make_tube(i8*) #1

declare dso_local i32* @make_job(i32, i32, i32, i32, i32) #1

declare dso_local i32 @assertf(i32, i8*) #1

declare dso_local i32 @get_all_jobs_used(...) #1

declare dso_local i32* @allocate_job(i32) #1

declare dso_local i32 @job_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
